--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,3 +21,19 @@ jobs:
           export PATH="/usr/share/miniconda/bin:$PATH"
           source activate black
           black --check qme
+
+  testing:
+    needs: formatting
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup testing environment
+        run: conda create --quiet --name testing pytest
+
+      - name: Test qme
+        run: |
+          export PATH="/usr/share/miniconda/bin:$PATH"
+          source activate testing
+          pip install -e .
+          pytest -sv tests/*.py
+          /bin/bash tests/test_client.sh
