updating base executor to have timestamp, adding confirmation to delete
Signed-off-by: vsoch <vsochat@stanford.edu>

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,4 +4,5 @@ recursive-include qme *
 recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
 recursive-exclude * IGNORE *
+recursive-include qme/app *.html *.css *.png *.js
 #recursive-include docs *.rst conf.py *.jpg *.png *.gif
