need to install sqlalchemy
Signed-off-by: vsoch <vsochat@stanford.edu>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,6 @@ jobs:
         run: |
           export PATH="/usr/share/miniconda/bin:$PATH"
           source activate testing
-          pip install -e .
+          pip install -e .[all]
           pytest -sv tests/*.py
           /bin/bash tests/test_client.sh
