more testing for slurm executor
Signed-off-by: vsoch <vsochat@stanford.edu>

--- a/qme/main/config/config.ini
+++ b/qme/main/config/config.ini
@@ -3,3 +3,6 @@ database = filesystem
 databaseconnect =
 
 [executor.shell]
+
+[executor.slurm]
+sacct_format = jobid,jobname,partition,alloccpus,elapsed,state,exitcode
