--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,4 +5,5 @@ recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
 recursive-exclude * IGNORE *
 recursive-include qme/app *.html *.css *.png *.js
+recursive-include qme/main/config *.ini
 #recursive-include docs *.rst conf.py *.jpg *.png *.gif
