forgot container envar
Signed-off-by: vsoch <vsochat@stanford.edu>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,6 +41,8 @@ jobs:
   build:
     needs: testing
     runs-on: ubuntu-latest
+    env:
+      CONTAINER: quay.io/vanessa/qme
     steps:
       - uses: actions/checkout@v2
       - name: Build Docker Image
