--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,3 +37,18 @@ jobs:
           pip install -e .[all]
           pytest -sv tests/*.py
           /bin/bash tests/test_client.sh
+
+  build:
+    needs: testing
+    runs-on: ubuntu-latest
+    env:
+      CONTAINER: quay.io/vanessa/qme
+    steps:
+      - uses: actions/checkout@v2
+      - name: Build Docker Image
+        run: docker build -t "${CONTAINER}" .
+      - name: Tag and Preview Container
+        run: |
+          DOCKER_TAG=$(docker run "${CONTAINER}:latest" --version)
+          echo "Docker tag is: ${DOCKER_TAG}"
+          docker run ${CONTAINER} --help
