tweaks for slurm
Signed-off-by: vsoch <vsochat@stanford.edu>

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ on:
       - master
 
 jobs:
-  formatting:
+  docker-deploy:
     runs-on: ubuntu-latest
     env:
       CONTAINER: quay.io/vanessa/qme
