--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,12 +13,13 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Setup black environment
-        run: conda create --quiet --name black black pyflakes
+        run: conda create --quiet --name black
 
       - name: Check formatting with black
         run: |
           export PATH="/usr/share/miniconda/bin:$PATH"
           source activate black
+          pip install black pyflakes          
           black --check qme
 
       - name: Check imports with pyflakes
